leptos_macro/tests/view/15_children_missing.stderr
error[E0277]: component `Inner` requires children
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^ children required
   |
   = help: the trait `__required_Inner_children` is not implemented for `leptos::prelude::__Absent`
   = note: add child elements between the opening and closing tags
note: required by a bound in `Inner::__PresenceBuilder::<(__F0, __F1, __F2)>::__require_props`
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `__PresenceBuilder::<(__F0, __F1, __F2)>::__require_props`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `Inner::__PresenceBuilder<(leptos::prelude::__Present, leptos::prelude::__Present, leptos::prelude::__Absent)>`, but its trait bounds were not satisfied
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^
...
16 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
  ::: $WORKSPACE/leptos/src/component.rs
   |
   | pub struct __Absent;
   | ------------------- doesn't satisfy `_: __required_Inner_children`
   |
note: trait bound `leptos::prelude::__Absent: __required_Inner_children` was not satisfied
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
